Add changeCubePosition function

--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,40 @@
 <!DOCTYPE html>
 <html dir="ltr" lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0" />
-    <title>Stencil Component Starter</title>
 
-    <script type="module" src="/build/sthreencil.esm.js"></script>
-    <script nomodule src="/build/sthreencil.js"></script>
-  </head>
-  <body>
-    <my-component first="Stencil" last="'Don't call me a framework' JS"></my-component>
-  </body>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0" />
+  <title>Stencil Component Starter</title>
+
+  <script type="module" src="/build/sthreencil.esm.js"></script>
+  <script nomodule src="/build/sthreencil.js"></script>
+</head>
+
+<body>
+  <three-d></three-d>
+  <canvas class="canvas-2"></canvas>
+
+  <!-- <script src="/three.js"></script> -->
+  <script>
+    // const scene = new THREE.Scene()
+    // const geometry = new THREE.BoxGeometry(1, 1, 1)
+    // const material = new THREE.MeshBasicMaterial({ color: "#fff" })
+    // const mesh = new THREE.Mesh(geometry, material)
+    // scene.add(mesh)
+    // const sizes = {
+    //   width: 800,
+    //   height: 500
+    // }
+    // const camera = new THREE.PerspectiveCamera(75, 8, sizes.height)
+    // camera.position.z = 6
+    // scene.add(camera)
+
+    // const canvas = document.querySelector("canvas-2")
+    // const renderer = new THREE.WebGLRenderer({ canvas: canvas })
+
+    // renderer.setSize(sizes.width, sizes.height)
+    // renderer.render(scene, camera)
+  </script>
+</body>
+
 </html>
